--- a/geral.css
+++ b/geral.css
@@ -1,1 +1,34 @@
 
+body{
+    margin: 0;
+    padding: 0;
+    
+}
+
+.calculadora{
+    background: yellow;
+    width: 180px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+}
+.claculadora input{
+padding: 5px;
+color: black;
+border-radius: 5px;
+}
+
+#sptotalgeral{
+    background: black;
+    color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 7px;
+    border-radius: 5px;
+}
+.calculadora button {
+    padding: 5px;
+    margin-top: 10px;
+    background: yellowgreen;
+    border-radius: 14px;
+}
+
